fix(creditsEditor): getFirst